--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,8 +2,10 @@
 
 export(HYDAT_list)
 export(booth_plot)
+export(date.subset)
 export(doys)
 export(fdcurve)
+export(hydrograph.plot)
 export(raster_qa)
 export(raster_trend)
 export(read_wsc)
