--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,4 +10,4 @@ License: AGPL-3
 LazyData: true
 URL: https://github.com/CSHS-hydRology/hydRology
 RoxygenNote: 6.0.1
-Dependence: R (>= 2.10), lubridate
+Dependence: R (>= 2.10)
